--- a/appspec.yml
+++ b/appspec.yml
@@ -6,5 +6,7 @@ files:
     destination: /var/analytics/an_predictions
 
 hooks:
+  BeforeInstall:
+    - location: /bash_scripts/before_install.sh
   AfterInstall:
     - location: /bash_scripts/after_install.sh
